[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Enemies/BetterEnemy.gd" type="Script" id=1]
[ext_resource path="res://3D Model Imports/Zombies/Zombie2/Full.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 200, 15, 200 )

[sub_resource type="CapsuleShape" id=2]
radius = 1.37369
height = 7.60522

[sub_resource type="BoxShape" id=3]
extents = Vector3( 4.98482, 4.91936, 5.52861 )

[node name="Enemy" type="KinematicBody" groups=[
"Enemy",
]]
transform = Transform( -1, 0, 8.74227e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.084692, 0.053055, 0 )
collision_layer = 3
script = ExtResource( 1 )

[node name="Full" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.991987, 0, 0.126338, 0, 1, 0, -0.126338, 0, -0.991987, -7.45058e-09, -0.0586215, 4.44089e-16 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 3.70769, 0, 0, 0, 1, 0, 0, 0 )
space_override = 1
collision_layer = 0
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="HitBox" type="Area" parent="." groups=[
"Enemy",
]]
transform = Transform( 1, 1.24847e-08, -8.96044e-10, -1.24847e-08, 0.989749, -0.142808, -8.96193e-10, 0.142808, 0.989749, 0.087677, -0.782566, -0.475587 )
space_override = 1
collision_layer = 2147483650

[node name="HeadHitBox" type="Area" parent="." groups=[
"Enemy",
]]
transform = Transform( 1, 7.10543e-15, 7.10543e-15, -2.13163e-14, 0.999999, 0, -1.13687e-13, -6.21176e-22, 0.999999, -0.13507, 1.25101, -0.0466993 )
space_override = 1
collision_layer = 2147483650

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="DieTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="AmmoBoxTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, -0.153088, 5.14557, 1.33833e-08 )
shape = SubResource( 2 )

[node name="AttackArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="AttackArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0749994, 5.62969, -6.45356 )
shape = SubResource( 3 )
[connection signal="attack1" from="." to="Full" method="_on_Enemy_attack1"]
[connection signal="attack2" from="." to="Full" method="_on_Enemy_attack2"]
[connection signal="kick" from="." to="Full" method="_on_Enemy_kick"]
[connection signal="runner" from="." to="Full" method="_on_Enemy_runner"]
[connection signal="walker" from="." to="Full" method="_on_Enemy_walker"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
[connection signal="timeout" from="AmmoBoxTimer" to="." method="_on_AmmoBoxTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
